ユーザー情報表示の実装

--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -2,7 +2,7 @@
  
 
  <div class="side_bar_header1">
-<a href="#">Tom</a>
+    <%= link_to current_user.name, edit_user_path(current_user) %>
  </div>
 
  <div class="side_bar_header2">
