--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -6,13 +6,13 @@
  </div>
 
  <div class="side_bar_header2">
-<a href="">チャットを作成する</a>
-</div>
+    <%= link_to "チャットを作成する", new_room_path %>
+ </div>
  </div>
 
   <div class="side_bar_bodies">
 
-  <div class="side_bar_body">
+  <%# <div class="side_bar_body">
   <div class="side_bar_body_room">
   <a href="#">techroom1</a>
   </div>
@@ -22,6 +22,14 @@
   <div class="side_bar_body_room">
   <a href="#">techroom1</a>
   </div>
-  </div>
+  </div> %>
+
+  <% current_user.rooms.each do |room| %>
+    <div class="side_bar_body">
+      <div class="side_bar_body_room">
+        <a href="#"><%= room.name %></a>
+      </div>
+    </div>
+  <% end %>
 
  </div>
