--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -27,7 +27,7 @@
   <% current_user.rooms.each do |room| %>
     <div class="side_bar_body">
       <div class="side_bar_body_room">
-        <a href="#"><%= room.name %></a>
+        <%= link_to room.name, room_messages_path(room) %>
       </div>
     </div>
   <% end %>
